# lpc55-test-usb-host

./: CMakeLists.txt  README.md  prj.conf  west.yml
board/boards/arm/lpcxpresso55s69_unsecure/: lpcxpresso55s69.dtsi  lpcxpresso55s69_unsecure.dts  lpcxpresso55s69_unsecure.yaml  lpcxpresso55s69_unsecure_defconfig
include/: host_msd_command.h
nxp_mcux_usb_host/: build.cmake
nxp_mcux_usb_host/fsl_components/osa/: fsl_os_abstraction.h  fsl_os_abstraction_zephyr.c  fsl_os_abstraction_zephyr.h
nxp_mcux_usb_host/fsl_components/osa/unit_tests/: test_osa.c  test_osa.h
nxp_mcux_usb_host/usb/host/: CMakeLists.txt
nxp_mcux_usb_host/usb/host/class/: CMakeLists.txt
nxp_mcux_usb_host/usb/include/: usb_misc.h
nxp_mcux_usb_host/usb_host_app/include/: usb_host_app.h
nxp_mcux_usb_host/usb_host_app/src/: usb_host_app.c
src/: hello_world.c  host_msd_command.c  host_msd_command_task.c  main.c
